kubernetes/home/apps/default/overseerr/app/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: overseerr
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`overseerr.shaklab.com`, `tv.shaklab.com`)
      kind: Rule
      middlewares:
        - name: middlewares-chain-no-auth
      services:
        - name: overseerr
          port: 5055
  tls:
    secretName: shaklab-com-tls-certs
